objects/Lead.object
<CustomObject>
    <fields>
        <fullName>pi__pardot_hard_bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that determines whether lead hard bounced.</description>
        <label>Pardot Hard Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Pardot score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Pardot. From there you can view his or her complete activity history. This URL is generated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AW_DirectAdviceCentreLeads_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Queue</filterScope>
        <label>Direct Advice Centre Leads Queue</label>
        <queue>AW_DirectAdviceCentreLeads</queue>
        <sharedTo>
            <group>AW_Advice_Centre</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AW_EinsteinLeadScoring_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD_SCORE</columns>
        <filterScope>Queue</filterScope>
        <label>Einstein Lead Scoring</label>
        <queue>AW_EinsteinLeadScoring</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>Liberty_Adviser_Personal_Assistant</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AW_StandardBankLeadsQueue_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Queue</filterScope>
        <label>Standard Bank Leads Queue</label>
        <queue>AW_StandardBankLeadsQueue</queue>
        <sharedTo>
            <group>AW_StandardBankLeadsManagers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AW_WebsiteLeadsQueue_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Queue</filterScope>
        <label>Website Leads Queue</label>
        <queue>AW_WebsiteLeadsQueue</queue>
        <sharedTo>
            <group>AW_Lead_Management</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD_SCORE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>AW_LeadCompleteness__c</columns>
        <columns>AW_SubProductInterest__c</columns>
        <columns>AW_IdleStatusIndicator__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Open Leads and Referrals</label>
        <sharedTo>
            <role>Liberty_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.MOBILE_PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>AW_ProductInterest__c</columns>
        <columns>AW_IdleStatusIndicator__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Leads and Referrals</label>
        <sharedTo>
            <group>AW_CampaignManagers</group>
            <group>AW_CustomerAndAdviserExecutive</group>
            <group>AW_LibertyAdministrators</group>
            <group>AW_SalesLeader</group>
            <group>Liberty_Adviser_Personal_Assistant</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Allocation_Queue_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>AW_LeadCompleteness__c</columns>
        <columns>AW_SubProductInterest__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>AW_IdleStatusIndicator__c</columns>
        <filterScope>Queue</filterScope>
        <label>Allocation Queue</label>
        <queue>AW_Allocation</queue>
        <sharedTo>
            <role>Liberty_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Distribution_Queue_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD_SCORE</columns>
        <columns>AW_LeadCompleteness__c</columns>
        <columns>AW_SubProductInterest__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>AW_IdleStatusIndicator__c</columns>
        <filterScope>Queue</filterScope>
        <label>Distribution Queue</label>
        <queue>AW_Distribution</queue>
        <sharedTo>
            <role>Liberty_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FinServ__Closed_Referrals_I_Created</fullName>
        <columns>FULL_NAME</columns>
        <columns>FinServ__ExpressedInterest__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>FinServ__PotentialValue__c</columns>
        <columns>LEAD.RATING</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Closed - Converted,Closed - Not Converted</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.FinServ__Referral</value>
        </filters>
        <filters>
            <field>FinServ__CreatedByMe__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Closed Referrals I Created</label>
        <sharedTo>
            <role>Liberty_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FinServ__Closed_Referrals_Im_Assigned</fullName>
        <columns>FULL_NAME</columns>
        <columns>FinServ__ExpressedInterest__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>FinServ__PotentialValue__c</columns>
        <columns>FinServ__ReferredByUser__c</columns>
        <columns>FinServ__ReferredByContact__c</columns>
        <columns>FinServ__ReferrerScore__c</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Closed - Converted,Closed - Not Converted</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.FinServ__Referral</value>
        </filters>
        <label>Closed Referrals I&apos;m Assigned</label>
        <sharedTo>
            <role>Liberty_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FinServ__Open_Referrals_I_Created</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD_SCORE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>AW_LeadCompleteness__c</columns>
        <columns>AW_SubProductInterest__c</columns>
        <columns>AW_IdleStatusIndicator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.FinServ__Referral</value>
        </filters>
        <filters>
            <field>FinServ__CreatedByMe__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Open Referrals I Created</label>
        <sharedTo>
            <role>Liberty_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FinServ__Open_Referrals_Im_Assigned</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD_SCORE</columns>
        <columns>AW_LeadCompleteness__c</columns>
        <columns>AW_SubProductInterest__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>AW_IdleStatusIndicator__c</columns>
        <filterScope>Mine</filterScope>
        <label>Open Referrals I&apos;m Assigned</label>
        <sharedTo>
            <role>Liberty_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD_SCORE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>AW_LeadCompleteness__c</columns>
        <columns>AW_SubProductInterest__c</columns>
        <columns>AW_IdleStatusIndicator__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads and Referrals</label>
        <sharedTo>
            <role>Liberty_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.MOBILE_PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>AW_ProductInterest__c</columns>
        <columns>AW_IdleStatusIndicator__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Leads and Referrals</label>
        <sharedTo>
            <group>AW_FinancialAdviser</group>
            <group>AW_SalesLeader</group>
            <group>Liberty_Adviser_Personal_Assistant</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD_SCORE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>AW_LeadCompleteness__c</columns>
        <columns>AW_SubProductInterest__c</columns>
        <columns>AW_IdleStatusIndicator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads and Referrals</label>
        <sharedTo>
            <role>Liberty_Administrator</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>AW_DefaultLead</fullName>
        <active>true</active>
        <businessProcess>AW_DefaultLeadProcess</businessProcess>
        <description>An individual person that is a potential lead/referral</description>
        <label>Client Lead/Referral</label>
    </recordTypes>
    <recordTypes>
        <fullName>AW_LibertyBusinessLeadReferral</fullName>
        <active>true</active>
        <businessProcess>AW_DefaultLeadProcess</businessProcess>
        <description>A business (Company or Trust) that is a potential lead/referral</description>
        <label>Liberty Business Lead/Referral</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__BusinessReferral</fullName>
        <active>true</active>
        <businessProcess>FinServ__Lead Process</businessProcess>
        <description>A business or organization that is a commercial banking business referral​</description>
        <label>Business Referral</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__General</fullName>
        <active>true</active>
        <businessProcess>FinServ__Lead Process</businessProcess>
        <label>General</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__Referral</fullName>
        <active>true</active>
        <businessProcess>FinServ__Lead Process</businessProcess>
        <description>A person, business, or organization that is a referral</description>
        <label>Person Referral</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__RetirementPlanning</fullName>
        <active>true</active>
        <businessProcess>FinServ__Lead Process</businessProcess>
        <label>Retirement Planning</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>AW_CloseLead</fullName>
        <active>true</active>
        <description>This validation rule checks if anyone but the Lead Manager can set the Lead Status to Closed.</description>
        <errorConditionFormula>AND (

  ISPICKVAL ( Status , &quot;Closed&quot;),
  NOT($Profile.Name = &quot;Liberty Lead Manager&quot;)
)</errorConditionFormula>
        <errorMessage>Please note that only a Lead Manager can Close a Lead</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AW_ClosedLeadReason</fullName>
        <active>true</active>
        <description>This will check if the Closed Reason field has been populated when the Lead Status has moved to Closed.</description>
        <errorConditionFormula>AND 
(
	OR
	(
		ISCHANGED(Status),
		ISNEW()
	),
	ISPICKVAL(Status , &quot;Closed&quot;),
        ISPICKVAL(  AW_ClosedReason__c , &quot;&quot; ),
        $Profile.Name = &quot;Liberty Lead Manager&quot;
 
)</errorConditionFormula>
        <errorDisplayField>AW_ClosedReason__c</errorDisplayField>
        <errorMessage>Please capture the Closed Reason before closing the Lead.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AW_Country_Check</fullName>
        <active>true</active>
        <description>This will check if the country entered is valid or not</description>
        <errorConditionFormula>AND
(
OR
(
RecordType.DeveloperName = &apos;AW_DefaultLead&apos;,
RecordType.DeveloperName = &apos;AW_LibertyBusinessLeadReferral&apos;
),
NOT(ISBLANK(Country)),
OR
(
ISNEW(),
ISCHANGED(Country)
),
VLOOKUP($ObjectType.AW_Country__c.Fields.Name, $ObjectType.AW_Country__c.Fields.Name,Country) &lt;&gt; Country
)</errorConditionFormula>
        <errorMessage>The Country entered is not valid. Please enter the correct Country name e.g. South Africa.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AW_LostLeadStatus</fullName>
        <active>true</active>
        <description>When Lost lead status is selected a reason must be provided as to why the lead was lost</description>
        <errorConditionFormula>AND 
(
	OR
	(
		ISCHANGED(Status),
		ISNEW()
	),
	ISPICKVAL(Status , &quot;Unsuccessful&quot;),  
	ISBLANK(AW_LeadStatusReason__c)
)</errorConditionFormula>
        <errorDisplayField>AW_LeadStatusReason__c</errorDisplayField>
        <errorMessage>Please capture the reason for the Lost status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AW_PassportCountryOfIssue_Blank</fullName>
        <active>true</active>
        <description>It checks if Identification Type is South African Id, then Passport Country Of Issue should be blank</description>
        <errorConditionFormula>AND
(
RecordType.DeveloperName = &apos;AW_DefaultLead&apos;,
ISPICKVAL(AW_IdentificationType__c, &apos;South African ID&apos;),
NOT(ISBLANK(AW_PassportCountryOfIssue__c)),
OR
(
ISNEW(),
ISCHANGED(AW_PassportCountryOfIssue__c)
)
)</errorConditionFormula>
        <errorMessage>Passport country of Issue should be empty, If Identification Type is South African ID.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AW_SpecialCharacter_Check</fullName>
        <active>true</active>
        <description>This validation will restrict having special characters in name fields.</description>
        <errorConditionFormula>AND(
RecordType.DeveloperName != &apos;BusinessReferral&apos;,
OR(
ISNEW(),ISCHANGED(FirstName),ISCHANGED(LastName),ISCHANGED(MiddleName)
),
OR(
(!ISBLANK(FirstName) &amp;&amp; NOT(REGEX(FirstName, &quot;^[A-Za-z]*[a-zA-Z-&apos; ]*[A-Za-z]$&quot;))),
(!ISBLANK(MiddleName) &amp;&amp; NOT(REGEX(MiddleName, &quot;^[A-Za-z]*[a-zA-Z-&apos; ]*[A-Za-z]$&quot;))),
(!ISBLANK(LastName) &amp;&amp; NOT(REGEX(LastName, &quot;^[A-Za-z]*[a-zA-Z-&apos; ]*[A-Za-z]$&quot;)))
)
)</errorConditionFormula>
        <errorMessage>Special characters are not allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__NonPortalUserReferrer</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
                NOT(ISBLANK(FinServ__ReferredByUser__c)),
                NOT(ISPICKVAL(FinServ__ReferredByUser__r.UserType, &apos;Standard&apos;))
            )</errorConditionFormula>
        <errorDisplayField>FinServ__ReferredByUser__c</errorDisplayField>
        <errorMessage>Internal referrers must be internal Salesforce users.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__SingleReferredByEntryByRecord</fullName>
        <active>true</active>
        <errorConditionFormula>OR( 
        AND( 
            OR($RecordType.DeveloperName = &quot;Referral&quot;, 
                $RecordType.DeveloperName = &quot;BusinessReferral&quot;),
            NOT(ISBLANK( FinServ__ReferredByUser__c )), 
            NOT(ISBLANK( FinServ__ReferredByContact__c )) 
        ), 
        AND ( 
            OR($RecordType.DeveloperName = &quot;Referral&quot;, 
                $RecordType.DeveloperName = &quot;BusinessReferral&quot;), 
            ISBLANK( FinServ__ReferredByUser__c ), 
            ISBLANK( FinServ__ReferredByContact__c ) 
        ) 
    )</errorConditionFormula>
        <errorDisplayField>FinServ__ReferredByContact__c</errorDisplayField>
        <errorMessage>Enter an internal referrer or an external referrer. You can list only one referrer for each referral.</errorMessage>
    </validationRules>
</CustomObject>